Made some changes requested by Kara - update doc in swagger and return 204 when no data
